till cards section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <link rel="stylesheet" href="./style/style.css">
@@ -56,10 +62,102 @@
       </div>
     </div>
   </div>
-<div class="d-flex justify-content-center chooseUs">
-  <p>
-    <h2>WHY CHOOSE US?</h2>
-  </p>
+
+  <div class="col-md-12 text-center">
+    <button type="button" class="btn chooseUs">WHY CHOOSE US?</button>
+  </div>
+
+  <div class="container">
+    <div class="row cont">
+      <div class="col-md-6 content"> 
+        <img src="./style/images-and-pngs/about-static/Group 37 (1).png" class="img-fluid" alt="">
+      </div>
+      <div class="col-md-6 col-xs-12 content2"> 
+        <p> We will make this happen by creating an ecosystem of community entrepreneurs that are working with us to power this magic. We want everyone to have the opportunity to join the e-commerce revolution underway in our country. </p> <br> 
+        <p> We will do this through top quality sourcing, highly efficient supply chains, a robust delivery network, and technology-powered intelligence and planning systems. </p> 
+      </div>
+    </div>
+
+    <div class="row cont">
+      <div class="col-md-6 col-xs-12 content2"> 
+        <p> We will make this happen by creating an ecosystem of community entrepreneurs that are working with us to power this magic. We want everyone to have the opportunity to join the e-commerce revolution underway in our country. </p> <br> 
+        <p> We will do this through top quality sourcing, highly efficient supply chains, a robust delivery network, and technology-powered intelligence and planning systems. </p> 
+      </div>
+      <div class="col-md-6 content"> 
+        <img src="./style/images-and-pngs/about-static/Group 37 (1).png" class="img-fluid" alt="">
+      </div>
+    </div>
+
+    <div class="row cont">
+      <div class="col-md-6 content"> 
+        <img src="./style/images-and-pngs/about-static/Group 37 (1).png" class="img-fluid" alt="">
+      </div>
+      <div class="col-md-6 col-xs-12 content2"> 
+        <p> We will make this happen by creating an ecosystem of community entrepreneurs that are working with us to power this magic. We want everyone to have the opportunity to join the e-commerce revolution underway in our country. </p> <br> 
+        <p> We will do this through top quality sourcing, highly efficient supply chains, a robust delivery network, and technology-powered intelligence and planning systems. </p> 
+      </div>
+    </div>
+
+    <div class="row cont">
+      <div class="col-md-6 col-xs-12 content2"> 
+        <p> We will make this happen by creating an ecosystem of community entrepreneurs that are working with us to power this magic. We want everyone to have the opportunity to join the e-commerce revolution underway in our country. </p> <br> 
+        <p> We will do this through top quality sourcing, highly efficient supply chains, a robust delivery network, and technology-powered intelligence and planning systems. </p> 
+      </div>
+      <div class="col-md-6 content"> 
+        <img src="./style/images-and-pngs/about-static/Group 37 (1).png" class="img-fluid" alt="">
+      </div>
+    </div>
+
+  <div>
+    <button type="button" class="btn explore">Explore our blog</button>
+  </div>
+  
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <p>Albinder Dhindsa | 09 September 21 | 3 mins read</p>
+          <h5 class="card-title"> Building a people-positive organisation</h5>
+          <p class="card-text">Albinder Dhindsa | 09 September 21 | 3 mins read
+            Building a people-positive organisation
+            Some of the steps we have taken towards building a more supportive, inclusive and diverse workplace</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <p>Sancheeta Kaushal | 09 September 21 | 4 mins read</p>
+          <h5 class="card-title"> Demystifying Failure</h5>
+          <p class="card-text">The primary reason for not learning anything has a lot to do with — not having permission to fail</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <p>Albinder Dhindsa | 05 May 21 | 4 mins read</p>
+          <h5 class="card-title">Towards a sustainable future</h5>
+          <p class="card-text"> The concept of sustainability entails that we live and work in the present in a manner that does not jeopardise the future</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sapiente libero optio tempora nemo reprehenderit, odit nobis harum accusamus dolore eligendi dignissimos? Quibusdam aliquid provident, quis odit deleniti sunt eum!
+    Ullam doloribus suscipit odit consectetur? Distinctio tempora praesentium esse fuga incidunt exercitationem soluta libero nam, voluptatibus quibusdam quia iure quasi illum accusamus in nostrum voluptatum culpa et neque rerum. Eos.
+    Perspiciatis commodi eius quidem iste officia ex qui porro accusantium repudiandae reprehenderit, dignissimos quisquam consectetur earum. Deserunt iusto, ullam quas quam, beatae voluptatibus dignissimos exercitationem, a facilis assumenda repellendus atque.
+    Excepturi, minima! Accusantium exercitationem doloremque molestiae iusto fugit sint rem. Veniam ratione, porro amet aliquid animi repudiandae autem voluptates alias. Unde cumque expedita temporibus fugiat quas earum odio vitae corrupti.
+    deserunt voluptatum ratione. Sint tenetur molestias vitae atque excepturi ut eum officia unde?
+    Distinctio eveniet alias voluptate eum maxime sequi, nihil molestiae aliquid perspiciatis in iste? Laboriosam beatae iure labore doloribus assumenda eum optio culpa, sint distinctio impedit numquam rerum quibusdam esse reprehenderit!
+    Blanditiis voluptate cupiditate hic labore nesciunt, nihil ipsum nulla vitae eveniet sit sint ipsa sapiente fugiat, suscipit ut iure impedit eum quibusdam. Tenetur, sed facere? Modi, minima! Repudiandae, fuga aspernatur?
+    Unde, praesentium cum nulla, molestias, aspernatur laborum eos nisi atque assumenda nobis facilis perferendis recusandae dignissimos asperiores debitis quos necessitatibus. Soluta repellendus velit illo accusamus nobis rem impedit quibusdam distinctio!
+    Nobis officiis aspernatur quae obcaecati hic doloribus tempora saepe dolor autem dignissimos nemo vel id optio neque ea, sint distinctio quaerat quo assumenda in molestiae deserunt numquam? Culpa, nemo molestiae.
+  </div>
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
