more card completed with responsive nature

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
   </div>
   
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 full-card">
       <div class="card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
-          <p>Albinder Dhindsa | 09 September 21 | 3 mins read</p>
+          <p class='card-small-heading'>Albinder Dhindsa | 09 September 21 | 3 mins read</p>
           <h5 class="card-title"> Building a people-positive organisation</h5>
           <p class="card-text">Albinder Dhindsa | 09 September 21 | 3 mins read
             Building a people-positive organisation
@@ -125,21 +125,21 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 full-card">
       <div class="card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
-          <p>Sancheeta Kaushal | 09 September 21 | 4 mins read</p>
+          <p class='card-small-heading'>Sancheeta Kaushal | 09 September 21 | 4 mins read</p>
           <h5 class="card-title"> Demystifying Failure</h5>
           <p class="card-text">The primary reason for not learning anything has a lot to do with — not having permission to fail</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 full-card">
       <div class="card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
-          <p>Albinder Dhindsa | 05 May 21 | 4 mins read</p>
+          <p class='card-small-heading'>Albinder Dhindsa | 05 May 21 | 4 mins read</p>
           <h5 class="card-title">Towards a sustainable future</h5>
           <p class="card-text"> The concept of sustainability entails that we live and work in the present in a manner that does not jeopardise the future</p>
         </div>
