--- a/index.html
+++ b/index.html
@@ -146,16 +146,56 @@
       </div>
     </div>
   </div>
+  <br><br><br>
+
+  <div class="peopleBuildingFBC">
+    <h4>Some of the people building Foodbychoice</h4>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4 full-card">
+      <div class="card people-card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Tanishq Chouhan</h5>
+          <img src="./style/images-and-pngs/about-static/linkedin.png" alt="Card image cap">
+          <img src="./style/images-and-pngs/about-static/twitter.png" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 full-card">
+      <div class="card people-card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Ishan Mishra</h5>
+          <img src="./style/images-and-pngs/about-static/linkedin.png" alt="Card image cap">
+          <img src="./style/images-and-pngs/about-static/twitter.png" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 full-card">
+      <div class="card people-card">
+        <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Chirayu Bodana</h5>
+          <img src="./style/images-and-pngs/about-static/linkedin.png" alt="Card image cap">
+          <img src="./style/images-and-pngs/about-static/twitter.png" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+  </div>
   <br>
-  <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sapiente libero optio tempora nemo reprehenderit, odit nobis harum accusamus dolore eligendi dignissimos? Quibusdam aliquid provident, quis odit deleniti sunt eum!
-    Ullam doloribus suscipit odit consectetur? Distinctio tempora praesentium esse fuga incidunt exercitationem soluta libero nam, voluptatibus quibusdam quia iure quasi illum accusamus in nostrum voluptatum culpa et neque rerum. Eos.
-    Perspiciatis commodi eius quidem iste officia ex qui porro accusantium repudiandae reprehenderit, dignissimos quisquam consectetur earum. Deserunt iusto, ullam quas quam, beatae voluptatibus dignissimos exercitationem, a facilis assumenda repellendus atque.
-    Excepturi, minima! Accusantium exercitationem doloremque molestiae iusto fugit sint rem. Veniam ratione, porro amet aliquid animi repudiandae autem voluptates alias. Unde cumque expedita temporibus fugiat quas earum odio vitae corrupti.
-    deserunt voluptatum ratione. Sint tenetur molestias vitae atque excepturi ut eum officia unde?
-    Distinctio eveniet alias voluptate eum maxime sequi, nihil molestiae aliquid perspiciatis in iste? Laboriosam beatae iure labore doloribus assumenda eum optio culpa, sint distinctio impedit numquam rerum quibusdam esse reprehenderit!
-    Blanditiis voluptate cupiditate hic labore nesciunt, nihil ipsum nulla vitae eveniet sit sint ipsa sapiente fugiat, suscipit ut iure impedit eum quibusdam. Tenetur, sed facere? Modi, minima! Repudiandae, fuga aspernatur?
-    Unde, praesentium cum nulla, molestias, aspernatur laborum eos nisi atque assumenda nobis facilis perferendis recusandae dignissimos asperiores debitis quos necessitatibus. Soluta repellendus velit illo accusamus nobis rem impedit quibusdam distinctio!
-    Nobis officiis aspernatur quae obcaecati hic doloribus tempora saepe dolor autem dignissimos nemo vel id optio neque ea, sint distinctio quaerat quo assumenda in molestiae deserunt numquam? Culpa, nemo molestiae.
+
+  <div class = 'bottom-content'>
+    <h4>Best online grocery shopping in India</h4>
+    <p>Shop on the go and buy groceries, fresh fruits & vegetables, cakes & other bakery items, meats & seafood, cosmetics, mobiles & accessories, electronics and baby care products. We get it all delivered at your doorstep within hours. You not only save time but also money with our best prices and offers. We get savings</p>
+    <br>
+    <h4>Single app for all your daily needs</h4>
+    <p>Order thousands of products at just a tap - milk, eggs, bread, cooking oil, ghee, atta, rice, fresh fruits & vegetables, spices, chocolates, chips, biscuits, Maggi, cold drinks, shampoos, soaps, body wash, pet food, diapers, electronics, other organic and gourmet products from your neighbourhood stores. A majority of these products belong to the company’s 8 in house brands namely Grofers Happy Day, Grofers Happy Home, Grofers Mothers choice, Grofers Happy Baby, G Fresh, O’range and budget brands like Savemore</p>
+    <br>
+    <h4>Order online on grofers to get the best deals in your city</h4>
+    <p>Cities we currently serve:  Delhi, Gurugram, Faridabad, Noida, Ghaziabad, Kolkata, Mumbai, Bengaluru, Hyderabad, Chennai, Pune, Ahmedabad, Jaipur, Lucknow, Agra, Allahabad, Durgapur, Guwahati, Bhiwadi, Sonipat, Chandigarh, Vadodra, Rohtak, Mathura, Meerut, Mohali, Moradabad, Kanpur, Unnao, Raebareli, Bahadurgarh, Aligarh, Bijnor, Gauriganj, Hisar, Panchkula, Gonda, Panipat, Zirakpur, Jamshedpur, Navi Mumbai, Nashik, Asansol</p>
+    <br>
   </div>
 
 </div>
