footer struct updated

--- a/index.html
+++ b/index.html
@@ -202,50 +202,13 @@
 <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
 
-  <div style="background-color: #6351ce;">
+  <div style="background-color: #161636; color: white;">
     <div class="container">
-
       <!-- Grid row-->
       <div class="row py-4 d-flex align-items-center">
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0">Get connected with us on social networks!</h6>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
-
-        </div>
-        <!-- Grid column -->
-
       </div>
       <!-- Grid row-->
-
     </div>
-  </div>
 
   <!-- Footer Links -->
   <div class="container text-center text-md-left mt-5">
@@ -270,10 +233,10 @@
           <a href="#!">Careers</a>
         </p>
         <p>
-          <a href="#!">BrandFlow</a>
+          <a href="#!">Blog</a>
         </p>
         <p>
-          <a href="#!">Bootstrap Angular</a>
+          <a href="#!">Press</a>
         </p>
       </div>
       <!-- Grid column -->
@@ -315,10 +278,11 @@
     <!-- Grid row -->
   </div>
   <!-- Footer Links -->
+</div>
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">
+    <p>By continuing past this page you agree to our Terms, Cookie policy and Privacy policy. All trademarks are properties of their respective owners. 2020-2021 © Foodbychoice Pvt. Ltd. All rights reserved</p>
   </div>
   <!-- Copyright -->
 </footer>
