--- a/index.html
+++ b/index.html
@@ -238,40 +238,77 @@
         <p>
           <a href="#!">Press</a>
         </p>
+        <p>
+          <a href="#!">Lead</a>
+        </p>
+        <p>
+          <a href="#!">Values</a>
+        </p>
       </div>
       <!-- Grid column -->
       <!-- Grid column -->
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
         <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+        <h6 class="text-uppercase font-weight-bold">For Consumers</h6>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <a href="#!">Your Account</a>
+          <a href="#!">Privacy</a>
         </p>
         <p>
-          <a href="#!">Become an Affiliate</a>
+          <a href="#!">Terms</a>
         </p>
         <p>
-          <a href="#!">Shipping Rates</a>
+          <a href="#!">FAQs</a>
         </p>
         <p>
-          <a href="#!">Help</a>
+          <a href="#!">Security</a>
+        </p>
+        <p>
+          <a href="#!">Mobile</a>
+        </p>
+        <p>
+          <a href="#!">Contact</a>
+        </p>
+      </div>
+      <!-- Grid column -->
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+        <!-- Links -->
+        <h6 class="text-uppercase font-weight-bold">For Partners</h6>
+        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <p>
+          <a href="#!">Express</a>
+        </p>
+        <p>
+          <a href="#!">Local</a>
+        </p>
+        <p>
+          <a href="#!">Spotlight</a>
+        </p>
+        <p>
+          <a href="#!">Warehouse</a>
+        </p>
+        <p>
+          <a href="#!">Deliver</a>
+        </p>
+        <p>
+          <a href="#!">Partner</a>
         </p>
       </div>
       <!-- Grid column -->
       <!-- Grid column -->
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
         <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <h6 class="text-uppercase font-weight-bold">Follow Us On</h6>
+        <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <i class="fab fa-facebook-square mr-3"></i>Facebook</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+          <i class="fab fa-instagram mr-3"></i>Instagram</p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+          <i class="fab fa-twitter-square mr-3"></i>Twitter</p>
         <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <i class="fab fa-linkedin mr-3"></i>LinkedIn</p>
       </div>
       <!-- Grid column -->
     </div>
