final changes made

--- a/index.html
+++ b/index.html
@@ -203,15 +203,16 @@
 <footer class="page-footer font-small unique-color-dark">
 
   <div style="background-color: #161636; color: white;">
+
     <div class="container">
       <!-- Grid row-->
       <div class="row py-4 d-flex align-items-center">
       </div>
       <!-- Grid row-->
     </div>
-
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
+    
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left mt-5">
     <!-- Grid row -->
     <div class="row mt-3">
       <!-- Grid column -->
@@ -310,10 +311,12 @@
         <p>
           <i class="fab fa-linkedin mr-3"></i>LinkedIn</p>
       </div>
+      
       <!-- Grid column -->
     </div>
     <!-- Grid row -->
   </div>
+  <img class="footer-image" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="footer-image">
   <!-- Footer Links -->
 </div>
 
