fixed overflow and margin in founders card

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
   </div>
   <br><br><br>
 
-  <div class="peopleBuildingFBC">
+  <div class="peopleBuildingFBC" style="text-align:center; justify-content:center;">
     <h4>Some of the people building Foodbychoice</h4>
   </div>
 
-  <div class="row founders d-flex justify-content-center">
-    <div class="col-md-3 founder-full-card">
+  <div class="row founders ">
+    <div class="col-sm-auto founder-full-card">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
@@ -162,8 +162,8 @@
           <img src="./style/images-and-pngs/about-static/twitter.png" alt="Card image cap">
         </div>
       </div>
-    </div>
-    <div class="col-md-3 founder-full-card">
+    </div> <div></div>
+    <div class="col-sm-auto founder-full-card">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
@@ -173,7 +173,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3 founder-full-card">
+    <div class="col-sm-auto founder-full-card">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
