--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   </div>
 
   <div class="row founders ">
-    <div class="col-sm-auto founder-full-card">
+    <div class="col-xs-auto founder-full-card mx-auto">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
@@ -163,7 +163,7 @@
         </div>
       </div>
     </div> <div></div>
-    <div class="col-sm-auto founder-full-card">
+    <div class="col-xs-auto founder-full-card mx-auto">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
@@ -173,7 +173,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-auto founder-full-card">
+    <div class="col-xs-auto founder-full-card mx-auto">
       <div class="card people-card">
         <img class="card-img-top" src="./style/images-and-pngs/about-static/Group 37 (1).png" alt="Card image cap">
         <div class="card-body">
